# cs-binding-generator

./: .coverage  .gitignore  COPILOT_CONTEXT.md  INCLUDE_DEPTH.md  INCLUDE_DIRECTORIES.md  README.md  SDL3.cs  SDL3_new.cs  pyproject.toml  test_enum_inheritance.py  test_enum_type.py  test_enum_type2.py
-/: bindings.cs  test.cs
cs_binding_generator/: __init__.py  code_generators.py  config.py  constants.py  generator.py  main.py  type_mapper.py
docs/: ARCHITECTURE.md  INCLUDE_DEPTH.md  INCLUDE_DIRECTORIES.md  MULTI_FILE_OUTPUT.md  RENAMING_EXAMPLE.xml  TROUBLESHOOTING.md  XML_CONFIG.md
test_dotnet/FreeTypeTest/: FreeType.cs  bindings.cs  cs-bindings.xml  freetype.cs  regenerate_bindings.sh
test_dotnet/LibtcodTest/: SDL3.cs  bindings.cs  cs-bindings.xml  libtcod.cs  regenerate_bindings.sh
test_dotnet/SDL3Test/: SDL3.cs  bindings.cs  cs-bindings.xml  regenerate_bindings.sh
tests/: conftest.py  test_cli.py  test_cli_extended.py  test_code_generators.py  test_defines.py  test_edge_cases.py  test_error_handling.py  test_flag_enums.py  test_generator.py  test_multi_file_deduplication.py  test_post_processing.py  test_removal.py  test_renaming.py  test_type_mapper.py  test_variadic_functions.py  test_xml_config.py
